<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="taftazani17@gmail.com">aftazani</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>driver_packages</depend>
  <depend>custom_interface</depend>
  <depend>gnc_packages</depend>
  <depend>simulation_packages</depend>
  <depend>vision_packages</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
